force-app/main/default/objects/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <label>API Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>