force-app/main/default/objects/fields/Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint__c</fullName>
    <label>Token Endpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>